--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,6 +1,7 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
 sudo apt-get update
+sudo apt install zsh
 sudo apt-get install -y vim wget git build-essential
 
 # Install miniconda
