--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -5,6 +5,7 @@ sudo apt install zsh
 sudo apt-get install -y vim wget git build-essential
 
 chsh -s $(which zsh)
+zsh
 
 # Install miniconda
 if ! conda --version
