--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -5,7 +5,6 @@ sudo apt install zsh
 sudo apt-get install -y vim wget git build-essential
 
 chsh -s $(which zsh)
-zsh
 
 # Install miniconda
 if ! conda --version
@@ -15,7 +14,7 @@ then
 
     # check the SHA256sum of Miniconda before executing.
     echo "00938c3534750a0e4069499baf8f4e6dc1c2e471c86a59caa0dd03f4a9269db6 $MINICONDA_FILE" | sha256sum --check || exit 1
-    zsh $MINICONDA_FILE
+    bash $MINICONDA_FILE
 fi
 
 {{ else if eq .chezmoi.os "darwin" -}}
