--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -7,8 +7,12 @@ sudo apt-get install -y vim wget git build-essential
 chsh -s $(which zsh)
 
 # Install nvim
-curl -OL https://github.com/neovim/neovim/releases/download/stable/nvim-linux64.tar.gz
+curl -LO https://github.com/neovim/neovim/releases/download/stable/nvim-linux64.tar.gz
 tar xzvf nvim-linux64.tar.gz -C ~/.local --strip-components=1
+
+# Install WezTerm
+curl -LO https://github.com/wez/wezterm/releases/download/20230408-112425-69ae8472/wezterm-20230408-112425-69ae8472.Ubuntu20.04.deb
+sudo apt install -y ./wezterm-20230408-112425-69ae8472.Ubuntu20.04.deb
 
 # Install miniconda
 if ! conda --version
