Add xcode installation

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -21,6 +21,8 @@ fi
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
 
+xcode-select --install
+
 # Install homebrew if it's not there already.
 if ! brew --version
 then
