--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -14,11 +14,13 @@ mkdir -p ~/.local/nvim
 tar xzvf nvim-linux64.tar.gz -C ~/.local/nvim --strip-components=1
 rm nvim-linux64.tar.gz
 
+{{ if not .devcontainer }}
 # Install Miniforge (Conda)
 if ! command -v conda >/dev/null 2>&1; then
     curl -LO "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh"
     bash Miniforge3-$(uname)-$(uname -m).sh -b
     rm Miniforge3-$(uname)-$(uname -m).sh
+    ~/miniforge3/condabin/conda init
 fi
 
 {{ else if eq .chezmoi.os "darwin" -}}
@@ -36,13 +38,6 @@ if ! command -v brew >/dev/null 2>&1; then
 fi
 
 # Install essential tools using Homebrew
-brew install coreutils wget vim git neovim
-
-# Install Miniforge (Conda)
-if ! command -v conda >/dev/null 2>&1; then
-    curl -LO "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh"
-    bash Miniforge3-$(uname)-$(uname -m).sh -b
-    rm Miniforge3-$(uname)-$(uname -m).sh
-fi
+brew install coreutils wget vim git neovim miniforge
 
 {{ end -}}
