--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -22,6 +22,7 @@ if ! command -v conda >/dev/null 2>&1; then
     rm Miniforge3-$(uname)-$(uname -m).sh
     ~/miniforge3/condabin/conda init
 fi
+{{ end }}
 
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
