update tmux config

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -39,6 +39,6 @@ if ! command -v brew >/dev/null 2>&1; then
 fi
 
 # Install essential tools using Homebrew
-brew install coreutils wget vim git neovim miniforge
+brew install coreutils wget vim git neovim miniforge tmux
 
 {{ end -}}
