--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -13,9 +13,14 @@ sudo chsh -s "$(which zsh)" $USER
 {{ end }}
 
 # Install Neovim
-mkdir -p ~/bin
-curl -Lo ~/bin/nvim https://github.com/neovim/neovim/releases/latest/download/nvim.appimage
-chmod u+x ~/bin/nvim
+INSTALL_DIR="$HOME/nvim"
+BIN_DIR="$HOME/bin"
+SYMLINK="$BIN_DIR/nvim"
+mkdir -p "$INSTALL_DIR" "$BIN_DIR"
+curl -LO https://github.com/neovim/neovim/releases/latest/download/nvim-linux64.tar.gz
+tar -xzf nvim-linux64.tar.gz -C "$INSTALL_DIR" --strip-components=1
+rm nvim-linux64.tar.gz
+ln -sf "$INSTALL_DIR/bin/nvim" "$SYMLINK"
 
 {{ if not .devcontainer }}
 # Install Miniforge (Conda)
