--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -1,4 +1,3 @@
-{{ $runSudo := promptBoolOnce . "runSudo" "Run sudo commands" }}
 {{- /* Checks if running interactively, which is not the case for GitHub Codespaces */ -}}
 {{- $interactive := stdinIsATTY -}}
 
@@ -31,3 +30,4 @@ data:
   name: {{ $name | quote }}
   email: {{ $email | quote }}
   devcontainer: {{ $devcontainer }}
+  runSudo: {{ promptBoolOnce . "runSudo" "Run sudo commands" }}
