Update editor path

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -110,5 +110,5 @@ source $ZSH/oh-my-zsh.sh
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
-export EDITOR="$HOME/bin/nvim"
+export EDITOR="nvim"
 export PATH="$HOME/.local/bin:$HOME/bin:$PATH"
