--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -4,7 +4,7 @@
 # Update package list and install essential tools
 {{ if .runSudo }}
 sudo apt update
-sudo apt install -y zsh vim wget git build-essential
+sudo apt install -y zsh vim wget git build-essential make unzip gcc ripgrep
 {{ end }}
 
 # Change default shell to zsh
