--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -8,7 +8,7 @@ sudo apt install -y zsh vim wget git build-essential make unzip gcc ripgrep
 {{ end }}
 
 # Change default shell to zsh
-chsh -s "$(which zsh)"
+chsh -u "$USER" -s "$(which zsh)"
 
 # Install Neovim
 INSTALL_DIR="$HOME/nvim"
