Refactor shell change command in run_once_install-packages.sh.tmpl to conditionally use sudo

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -8,7 +8,12 @@ sudo apt install -y zsh vim wget git build-essential make unzip gcc ripgrep
 {{ end }}
 
 # Change default shell to zsh
-chsh -u "$USER" -s "$(which zsh)"
+{{ if .runSudo }}
+sudo chsh -s "$(which zsh)" "$USER"
+{{ else }}
+chsh -s "$(which zsh)" "$USER"
+{{ end }}
+
 
 # Install Neovim
 INSTALL_DIR="$HOME/nvim"
